# network-as-code-py

./: .coveragerc  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Jenkinsfile  LICENSE  README.md  app.py  coverage.xml  extract_version.py  generate_docs.sh  jenkinsfile  pylintrc  pyproject.toml  requirements.txt  tmo-app.py
.github/: CODEOWNERS
.github/workflows/: python.yml
api-tests/: bouncer-check.py  test_nac_api.py  upload_nac_api_to_bouncer.py
api-tests/api-dependencies/: api.yaml
binding_generation/: devicestatus-api-new.json  devicestatus-api.json  generate_bindings.sh  location-api.json  qos-api.json  setup.py  slice-api.json
binding_generation/.openapi-generator/: FILES
binding_generation/devicestatus_client/: .gitlab-ci.yml  .travis.yml  README.md  setup.py  tox.ini
binding_generation/devicestatus_client/.openapi-generator/: FILES
binding_generation/devicestatus_client/devicestatus_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py  schemas.py
binding_generation/location_client/: .gitlab-ci.yml  .travis.yml  README.md  setup.py  tox.ini
binding_generation/openapi_client/: README.md  __init__.py  openapi.json
binding_generation/qos_client/: .gitlab-ci.yml  .travis.yml  README.md  setup.py  tox.ini
binding_generation/qos_client/qos_client/: rest.py  (+5 more)
binding_generation/slice_client/: .gitlab-ci.yml  .travis.yml  README.md  setup.py  tox.ini
examples/: call-forwarding-signal.py  custom_network_profiles.py  device-status.py  identity-security.py  location-information.py  nac_drone.py  network-insights.py  network_profiles.py  network_slices.py  notification-handling.py  number-verification.py  qod_example.py
installation_tests/: test_sdk_installation.py
integration_tests/: conftest.py  test_call_forwarding.py  test_device_status.py  test_geofencing.py  test_location.py  test_network_insights.py  test_number_verification.py  test_qos.py  test_sim_swap.py  test_slice.py
network_as_code/: Configuration.py  CustomNetworkProfile.py  Device.py  DeviceLocation.py  GeoZone.py  NetworkProfile.py  NetworkSlice.py  RequestHandler.py  __init__.py  client.py
network_as_code/api/: __init__.py  admin.py  authorization_api.py  call_forwarding_api.py  client.py  congestion_api.py  credentials_api.py  device_api.py  device_status_api.py  geofencing_api.py  info.py  location_api.py  notifications.py  number_verification_api.py  qod_api.py  services.py  sim_swap_api.py  slice_api.py  subscription.py  utils.py
network_as_code/errors/: __init__.py  error_handler.py
network_as_code/models/: __init__.py  bandwidth.py  congestion.py  device.py  device_status.py  geofencing.py  location.py  network_slice.py  notification.py  number_verification.py  qos_flow.py  resource.py  services.py  session.py  slice.py  subscription.py
network_as_code/namespaces/: __init__.py  authorization.py  device.py  device_status.py  geofencing.py  insights.py  namespace.py  network_slice.py  notification.py  services.py  session.py  slice.py  subscription.py
network_as_code/old/: CustomNetworkProfile.py  DeviceLocation.py  GeoZone.py  NetworkProfile.py  RequestHandler.py  device.py
network_as_code/services/: slice_service.py
tests/: conftest.py  test_authorization.py  test_call_forwarding_mock.py  test_device_creation.py  test_device_json_serialization.py  test_device_status.py  test_device_status_api_mock.py  test_geofencing_mock.py  test_location.py  test_location_mock.py  test_nac.py  test_nac_client.py  test_nac_py.py  test_network_insights.py  test_number_verification.py  test_qos.py  test_qos_mock.py  test_sim_swap_mock.py  test_slice.py  test_slice_mock.py
(+368 files in other folders)
