[tool.poetry]
name = "network_as_code"
version = "5.2.0"
description = ""
authors = ["Sami Lahtinen <sami.lahtinen@nokia.com>", "Pavel Garmuyev <pavel.garmuyev@nokia.com>"]
packages = [
    { include = "network_as_code" },
]
license = "Apache-2.0"

[tool.pyright]
include = ["network_as_code"]
exclude = ["**/__pycache__", "**/.pytest_cache", "**/.*"]
pythonVersion = "^3.9"
pythonPlatform = "Linux"


[tool.poetry.dependencies]
python = "^3.11"
pydantic = {extras = ["email"], version = "^2.7.1"}
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.2.2"
pyright = "^1.1.271"
pytest-asyncio = "^0.19.0"
pdoc = "^14.5.1"
pytest = "^8.3.3"
pytest-cov = "^4.0.0"
black = "^24.3.0"
pyyaml = "^6.0"
python-dotenv = "^0.19.2"
pytest-env = "^0.8.2"
pytest-httpx = "^0.34.0"
pip-audit = "^2.6.1"
pipdeptree = "^2.13.2"
toml = "^0.10.2"
pytest-xdist = "^3.6.1"
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
    #"integration_tests"
]
xfail_strict = true

[tool.poetry_bumpversion.file."network_as_code/__init__.py"]



